Updated API Routes, added error handling
